Improved Verify page workflow
